# AI-Based-Real-Time-Insider-Threat-Detection-with-Active-Firewall-Enforcement

./: PROJECT_COMPONENT_EXPLANATION.txt  dashboard.py  requirements.txt
Test Site/: DEPLOY.md
backend/: app.py
docs/: project-plan.md  project_code_explanation.docx
frontend/: index.html  package.json
frontend/src/: main.jsx  styles.css
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/: .gitignore  README.md  package-lock.json  pyproject.toml  run_demo.py
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/Test Site/: README (4).md  index.html
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/frontend/: package-lock.json
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/scripts/: client_logger.py  generate_sample_data.py
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/src/insider_threat_detection/: ai_firewall_advisor.py  config.py  detector.py  firewall.py  models.py  pipeline.py  simulator.py  train_firewall_nn.py
real-time-insider-threat-detection-firewall-implimentation-with-better-nn-and-testtrain/src/insider_threat_detection.egg-info/: SOURCES.txt
scripts/: serve_test_site.py
src/insider_threat_detection/: __init__.py
src/insider_threat_detection.egg-info/: PKG-INFO  top_level.txt
