[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "insider-threat-detection"
version = "0.1.0"
description = "Course starter for real-time insider threat detection using network behavior profiling"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
